kubernetes/backend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
---
apiVersion: v1
kind: Service
metadata:
  name: backend 
  namespace: backend
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: backend 

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend 
  namespace: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend 
  template:
    metadata:
      labels:
        app: backend 
    spec:
      containers:
      - name: backend 
        image: backend
        imagePullPolicy: IfNotPresent # Use local image
        ports:
        - containerPort: 3000
