kubernetes/flights.yaml
apiVersion: v1
kind: Service
metadata:
  name: flights
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: flights 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flights 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flights 
  template:
    metadata:
      labels:
        app: flights 
    spec:
      containers:
      - name: flights 
        image: asiregistry.azurecr.io/flights
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: secrets-store01-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 60
          timeoutSeconds: 30
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "asi-kv2"
