kubernetes/frontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
---
# Create a load balancer so I can access it from localhost
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: asiregistry.azurecr.io/frontend 
        ports:
        - containerPort: 80
