kubernetes/players.yaml
apiVersion: v1
kind: Service
metadata:
  name: players
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4000
  selector:
    app: players
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: players
spec:
  replicas: 3
  selector:
    matchLabels:
      app: players
  template:
    metadata:
      labels:
        app: players
    spec:
      containers:
      - name: players
        image: asiregistry.azurecr.io/players
        ports:
        - containerPort: 4000
        volumeMounts:
        - name: secrets-store01-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true 
        livenessProbe:
          httpGet:
            path: /health
            port: 4000
          initialDelaySeconds: 10
          periodSeconds: 60
          timeoutSeconds: 30
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "asi-kv2"
