kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    appgw.ingress.kubernetes.io/health-probe-path: /health
    appgw.ingress.kubernetes.io/rewrite-rule-set: remove-root
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /flights
        pathType: Prefix
        backend:
          service:
            name: flights 
            port:
              number: 80
      - path: /players
        pathType: Prefix
        backend:
          service:
            name: players
            port:
              number: 80
